Settings: Add switch for linked ring and media notification volumes
Author: Dan Pasanen <dan.pasanen@gmail.com>
Date:   Wed Oct 30 09:22:30 2019 -0500

    VolumePanel: fix showing notification volume slider when unlinked

    * volume_link_notification lives in Settings.Secure not LineageSettings.Secure
    * Set max panel slices to 6. We could have up to 5 volumes to control and
      MEDIA_OUTPUT_INDICATOR_SLICE_URI counts as one slice as well.

    Change-Id: I0a4c7db1c92e778fba669931259cd52164b1df65

Settings: Use correct icon for ring volume

Author: Han Wang <416810799@qq.com>
Date:   Tue Aug 4 13:33:45 2020 +0200

    Settings: Fix icon size for ring volume

    Change-Id: Idc62abbaea8d4d4ccb72f4a9f395ce0f861dc705

    Change-Id: If145262562c1409cd8a6cb79ba46b6646c75d1a8
    Signed-off-by: PMS22 <prathams99@rediff.com>

Change-Id: I900af398f566a5415c44fe883cc214985f4e9cd4

--- a/res/values-de/derp_strings.xml
+++ b/res/values-de/derp_strings.xml
@@ -18,4 +18,6 @@
     <!-- String for removal of sensitive info on about, depending on tap -->
     <string name="device_info_protected_single_press">Tippen, um Informationen anzuzeigen</string>
 
+    <!-- Volume link notification -->
+    <string name="volume_link_notification_title">Klingelton- und Benachrichtigungslautstärke verknüpfen</string>
 </resources>
