Settings: support black theme for dark mode [2/4]
Change-Id: I12451c0b72f73b08b885e8103bbe3e74a0c4e19f
Signed-off-by: althafvly <althafvly@gmail.com>

--- a/res/values-de/derp_strings.xml
+++ b/res/values-de/derp_strings.xml
@@ -474,4 +474,8 @@
     <!-- Brightness control -->
     <string name="status_bar_toggle_brightness">Helligkeitssteuerung</string>
     <string name="status_bar_toggle_brightness_summary">Helligkeit durch Wischen über die Statusleiste anpassen</string>
+
+    <!-- Black theme for dark mode -->
+    <string name="berry_black_theme_title">Reines Schwarz</string>
+    <string name="berry_black_theme_summary">Rein schwarzer Hintergrund für dunkles Design</string>
 </resources>
