Settings: Improve link ring & notification volume switch
Hide the notification volume SeekBar when we don't need it
and change the title of ring SeekBar accordingly
was suggested by poad42

Change-Id: Ibc58f7f6101f00947e06bdb60daa20890365f40d
[nurkeinneid] Switch to a custom string to accommodate translations
Signed-off-by: NurKeinNeid <mralexman3000@gmail.com>

--- a/res/values-de/derp_strings.xml
+++ b/res/values-de/derp_strings.xml
@@ -20,4 +20,7 @@
 
     <!-- Volume link notification -->
     <string name="volume_link_notification_title">Klingelton- und Benachrichtigungslautstärke verknüpfen</string>
+
+    <!-- Sound: Title for the option managing ring volume. When unlinked [CHAR LIMIT=30] -->
+    <string name="ring_volume_unlinked_option_title">Klingeltonlautstärke</string>
 </resources>
