--- a/res/xml/firmware_version.xml
+++ b/res/xml/firmware_version.xml
@@ -25,6 +25,7 @@
     <com.android.settingslib.widget.LayoutPreference
         android:key="derp_logo"
         android:layout="@layout/derp_logo"
+        android:selectable="false"
         android:clickable="true"
         settings:controller="com.android.settings.deviceinfo.firmwareversion.DerpFestLogoPreferenceController"/>
 
@@ -41,6 +42,7 @@
     <Preference
         android:key="derp_version"
         android:title="@string/derp_version"
+        android:selectable="false"
         android:summary="@string/summary_placeholder"
         settings:enableCopying="true"
         settings:controller="com.android.settings.deviceinfo.firmwareversion.DerpFestVersionPreferenceController"/>
@@ -49,6 +51,7 @@
     <Preference
         android:key="maintainer"
         android:title="@string/maintainer"
+        android:selectable="false"
         android:summary="@string/maintainer_name"
         settings:enableCopying="true" >
         <intent
