Settings: Incall vibration options [3/3]
* Allow setting vibration when call is connected
* Allow setting vibration when call is disconnected
* Allow setting vibration for call waiting

Change-Id: I40e2d73c815d0cb534e9c4c0829a7748cd6d8585
Co-Authored-By: beanstown106 <nbenis106@gmail.com>
Co-Authored-By: Erfan Abdi <erfangplus@gmail.com>
Signed-off-by: Mohammad Hasan Keramat J <ikeramat@protonmail.com>
[nurkeinneid]:
- Take into account the accessibility_vibration_intensity_settings,
  introduced in eaaf533
Signed-off-by: NurKeinNeid <mralexman3000@gmail.com>

--- a/res/xml/accessibility_vibration_intensity_settings.xml
+++ b/res/xml/accessibility_vibration_intensity_settings.xml
@@ -44,6 +44,29 @@
     </PreferenceCategory>
 
     <PreferenceCategory
+        android:key="incall_vib_options"
+        android:title="@string/incall_vibration_category" >
+ 
+        <org.derpfest.support.preferences.SystemSettingSwitchPreference
+            android:key="vibrate_on_connect"
+            android:title="@string/incall_vibrate_connect_title"
+            android:defaultValue="false"
+            app:controller="com.android.settings.accessibility.InCallConnectVibrationTogglePreferenceController" />
+
+        <org.derpfest.support.preferences.SystemSettingSwitchPreference
+            android:key="vibrate_on_callwaiting"
+            android:title="@string/incall_vibrate_call_wait_title"
+            android:defaultValue="false"
+            app:controller="com.android.settings.accessibility.InCallWaitingVibrationTogglePreferenceController" />
+
+        <org.derpfest.support.preferences.SystemSettingSwitchPreference
+            android:key="vibrate_on_disconnect"
+            android:title="@string/incall_vibrate_disconnect_title"
+            android:defaultValue="false"
+            app:controller="com.android.settings.accessibility.InCallDisconnectVibrationTogglePreferenceController" />
+  </PreferenceCategory>
+
+    <PreferenceCategory
         android:key="accessibility_notification_alarm_vibration_category"
         android:title="@string/accessibility_notification_alarm_vibration_category_title">
 
