Settings: Match contextual card dimensions with search bar
Signed-off-by: jackson177 <noor90saleh@gmail.com>

--- a/res/values/derp_dimens.xml
+++ b/res/values/derp_dimens.xml
@@ -8,4 +8,7 @@
     <dimen name="fingerprint_find_sensor_padding_top">16dp</dimen>
 
     <dimen name="package_list_padding_top">16dp</dimen>
+
+    <!-- Dimensions for Contextual Card -->
+    <dimen name="contextual_card_content_padding">13dp</dimen>
 </resources>
